--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^2.14.0",
+    "axios": "^0.20.0",
+    "nuxt": "^2.14.5",
     "vuesax": "^4.0.1-alpha.23"
   },
   "devDependencies": {}
